--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 <gestureRecognizers/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="large_0" translatesAutoresizingMaskIntoConstraints="NO" id="ofo-94-zGX">
-                                <rect key="frame" x="141" y="711.5" width="132" height="30"/>
+                                <rect key="frame" x="141" y="700" width="132" height="41.5"/>
                             </imageView>
                             <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="n7x-K8-8oO">
                                 <rect key="frame" x="10" y="98" width="394" height="30"/>
@@ -103,8 +103,18 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="bJg-BF-2ii">
+                                <rect key="frame" x="117.5" y="661" width="179" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="(647) 975-1430">
+                                    <color key="titleColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="makeCallButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VOM-zY-FBr"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gry-IR-r2G">
-                                <rect key="frame" x="281" y="711" width="108" height="30"/>
+                                <rect key="frame" x="300" y="705" width="98" height="30"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
@@ -119,33 +129,24 @@
                                     <action selector="selectRestaurantButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F5p-2e-iGX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="bJg-BF-2ii">
-                                <rect key="frame" x="117.5" y="661" width="179" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="(647) 975-1430">
-                                    <color key="titleColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="makeCallButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VOM-zY-FBr"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="n7x-K8-8oO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="5gC-SX-hdt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="n7x-K8-8oO" secondAttribute="trailing" constant="10" id="6Pf-Fk-9Wg"/>
-                            <constraint firstItem="ofo-94-zGX" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="bottom" constant="8.5" id="77Z-95-ZRZ"/>
+                            <constraint firstItem="ofo-94-zGX" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="bottom" constant="-3" id="77Z-95-ZRZ"/>
+                            <constraint firstItem="ofo-94-zGX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9ju-dD-JEe"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="width" secondItem="bJg-BF-2ii" secondAttribute="width" id="A9i-YL-kGt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ggs-SX-jCD" secondAttribute="trailing" id="B9d-h4-rYz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xx3-we-i9L" secondAttribute="trailing" constant="10" id="CMU-ye-hOj"/>
-                            <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="top" secondItem="gry-IR-r2G" secondAttribute="bottom" constant="8" id="DHx-bZ-MkM"/>
+                            <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="top" secondItem="gry-IR-r2G" secondAttribute="bottom" constant="14" id="DHx-bZ-MkM"/>
                             <constraint firstItem="n7x-K8-8oO" firstAttribute="top" secondItem="jYN-fS-ZZC" secondAttribute="bottom" constant="10" id="DuX-5c-zMt"/>
-                            <constraint firstItem="gry-IR-r2G" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="bottom" constant="8" id="Fho-Wu-y5V"/>
+                            <constraint firstItem="gry-IR-r2G" firstAttribute="top" secondItem="bJg-BF-2ii" secondAttribute="bottom" constant="2" id="Fho-Wu-y5V"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="leading" secondItem="bJg-BF-2ii" secondAttribute="leading" id="Hga-uQ-hYR"/>
                             <constraint firstItem="jYN-fS-ZZC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="INp-Cb-Fd3"/>
-                            <constraint firstItem="ofo-94-zGX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KlC-Uf-QGa"/>
                             <constraint firstItem="bJg-BF-2ii" firstAttribute="top" secondItem="kRK-E4-ILX" secondAttribute="bottom" constant="4.5" id="L6I-rM-C1s"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gry-IR-r2G" secondAttribute="trailing" constant="25" id="Vp6-6e-C5i"/>
+                            <constraint firstItem="gry-IR-r2G" firstAttribute="leading" secondItem="ofo-94-zGX" secondAttribute="trailing" constant="27" id="VRa-Rt-uOk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gry-IR-r2G" secondAttribute="trailing" constant="16" id="Vp6-6e-C5i"/>
                             <constraint firstItem="Xx3-we-i9L" firstAttribute="top" secondItem="jYN-fS-ZZC" secondAttribute="bottom" constant="5" id="Zum-i3-LgB"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ty0-Cv-aeJ" secondAttribute="trailing" constant="16" id="ajN-56-VbX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bJg-BF-2ii" secondAttribute="trailing" symbolic="YES" id="asS-5h-iYy"/>
@@ -158,7 +159,6 @@
                             <constraint firstItem="jYN-fS-ZZC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mQU-J4-jRu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ty0-Cv-aeJ" secondAttribute="bottom" constant="10" id="seN-by-WHV"/>
                             <constraint firstItem="Ggs-SX-jCD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tHn-Uf-JRU"/>
-                            <constraint firstItem="gry-IR-r2G" firstAttribute="leading" secondItem="ofo-94-zGX" secondAttribute="trailing" constant="8" id="twl-Vs-C3i"/>
                             <constraint firstItem="6sg-8I-k3w" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uSq-0Q-Tko"/>
                             <constraint firstItem="kRK-E4-ILX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vZC-JU-8qO"/>
                             <constraint firstItem="Ty0-Cv-aeJ" firstAttribute="top" secondItem="ofo-94-zGX" secondAttribute="bottom" constant="7.3399999999999999" id="vgg-aV-Spn"/>
@@ -441,7 +441,6 @@
                                                 <constraint firstItem="lzu-cm-6p8" firstAttribute="bottom" secondItem="QEN-fn-XQg" secondAttribute="bottomMargin" id="zWI-Oo-LOs"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="restaurantAddress" destination="4er-Le-Fy5" id="o8h-1g-ZgM"/>
                                             <outlet property="restaurantImage" destination="lzu-cm-6p8" id="ktj-ku-a8f"/>
